--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200&display=swap');
 
-*{
+body{
     margin: 0;
     height: 0;
     font-family: 'Poppins', sans-serif;
+    font-size: 20px;
 
 }
 
@@ -41,4 +42,11 @@ button {
     margin-left: 2rem;
     padding: 1rem auto;
     width: 10rem;
+}
+
+.p-resultado{
+    display: flex;
+    flex-direction: column;
+    margin: 2rem auto;
+
 }
